--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 </head>
 <body>
     <nav class="navegacion">
+        <input type="checkbox" id="check">
+    <label for="check" class="checkbtn">
+        <i class="fas fa-bars"></i>
+     </label>
         <ul>
             <li><a href="#"><span>Home</span></a></li>
             <li><a href="#">Acerca de Mí</a></li>
@@ -25,7 +29,7 @@
     </nav>
     <section class="parteprincipal">
         <div class="parteprincipal-contenedor">
-            <p>Soy <span><b>Aldo Abarca</b></span></p>
+            <h1>Soy <span><b>Aldo Abarca</b></span></h1>
             <h2>Creo, diseño y desarrollo para darle el valor a tu producto</h2>
             <div class="Fotobackground-contenedor">
                 <div class="smallboxbackground1">
